logs/Slang/generated/hdlconv/hdlconvertor_p940.sv.log
name: hdlconvertor_p940
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p940.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p940.sv:1:1: error: language feature not yet supported
export "DPI-C" f_plus = function \f+ ; // "f+" exported as "f_plus"             
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p940.sv:2:1: error: language feature not yet supported
export "DPI-C" function f; // "f" exported under its own name                   
^~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p940.sv:3:7: error: expected package import
import "DPI-C" init_1 = function void \init[1] (); // "init_1" is a linkage name
      ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p940.sv:3:8: error: expected member
import "DPI-C" init_1 = function void \init[1] (); // "init_1" is a linkage name
       ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p940.sv:4:7: error: expected package import
import "DPI-C" \begin = function void \init[2] (); // "begin" is a linkage name 
      ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p940.sv:4:8: error: expected statement
import "DPI-C" \begin = function void \init[2] (); // "begin" is a linkage name 
       ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p940.sv:4:16: error: use of undeclared identifier 'begin'
import "DPI-C" \begin = function void \init[2] (); // "begin" is a linkage name 
               ^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p940.sv:4:24: error: expected ';'
import "DPI-C" \begin = function void \init[2] (); // "begin" is a linkage name 
                       ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p940.sv:4:25: error: expected expression
import "DPI-C" \begin = function void \init[2] (); // "begin" is a linkage name 
                        ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p940.sv:4:25: error: expected statement
import "DPI-C" \begin = function void \init[2] (); // "begin" is a linkage name 
                        ^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p940.sv:4:34: error: expected expression
import "DPI-C" \begin = function void \init[2] (); // "begin" is a linkage name 
                                 ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p940.sv:4:38: error: expected ';'
import "DPI-C" \begin = function void \init[2] (); // "begin" is a linkage name 
                                     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p940.sv:4:39: error: use of undeclared identifier 'init[2]'
import "DPI-C" \begin = function void \init[2] (); // "begin" is a linkage name 
                                      ^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p940.sv:4:51: error: expected 'endfunction'
import "DPI-C" \begin = function void \init[2] (); // "begin" is a linkage name 
                                                  ^
